--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,12 +4,10 @@
 		<div class="pad-r-5px">{{site.Copyright}}</div>
 	{{else}}
 		<div class="pad-r-5px">
-		©
 		{{- now.Format "2006"}} {{site.Title}}
 		</div>
 	{{end}}
-	<div class="pad-r-5px">Power by <a href="https://gohugo.io">Hugo</a></div>
-	<div>Theme <a href="https://github.com/J-Siu/hugo-theme-sk2/">SK2</a> by <a href="https://github.com/J-Siu/">J-Siu</a></div>
+	<em><div class="pad-r-5px">This website was built with <a href="https://gohugo.io">Hugo</a> and hosted on <a href="https://pages.github.com/">Pages.</a></div>
 
 </footer>
 
