--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,8 @@
 		{{- now.Format "2006"}} {{site.Title}}
 		</div>
 	{{end}}
-	<em><div class="pad-r-5px">This website was built with <a href="https://gohugo.io">Hugo</a> and hosted on <a href="https://pages.github.com/">Pages.</a></div>
+	<em><div class="pad-r-5px">This website was built with <a href="https://gohugo.io">Hugo</a> 
+		and hosted on <a href="https://pages.github.com/">GitHun Pages.</a></div>
 
 </footer>
 
