--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
 
 html {
   font-family: 'aulac', Arial, Helvetica, sans-serif;
+  letter-spacing: .025rem;
 }
 
 .flex {
@@ -27,6 +28,7 @@ header h2,
 header h3 {
   margin-block-end: 0px;
   margin-block-start: 0px;
+  text-transform: uppercase;
 }
 
 .flex-right {
