--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,5 +2,5 @@
 	<!--Meta-->
 	<meta charset="utf-8">
 	<!--css-->
-	<link rel="stylesheet" href="{{relLangURL ""}}css/style.css">
+	<link rel="stylesheet" href="{{relLangURL ""}}assets/css/style.css">
 </head>
