--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
 		</div>
 	{{end}}
 	<em><div class="pad-r-5px">This website was built with <a href="https://gohugo.io">Hugo</a> 
-		and hosted on <a href="https://pages.github.com/">GitHun Pages.</a></div>
+		and hosted on <a href="https://pages.github.com/">GitHuB Pages.</a></div>
 
 </footer>
 
