--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,7 @@
-@font-face {
-  font-family: 'aulac';
-  src: url(../fonts/aulac.woff2) format('woff2'),
-      url(../fonts/aulac.woff) format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
+@import '../fonts/aulac/stylesheet.css';
 
 html {
-  font-family: 'aulac', Arial, Helvetica, sans-serif;
+  font-family: 'aulac', Helvetica, Arial, sans-serif;
 }
 
 .flex {
@@ -27,7 +21,6 @@ header h2,
 header h3 {
   margin-block-end: 0px;
   margin-block-start: 0px;
-  text-transform: uppercase;
 }
 
 .flex-right {
