--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,12 @@
 
 html {
   font-family: 'aulac', Helvetica, Arial, sans-serif;
+  letter-spacing: 0.035em;
+  line-height: 140%;
+  width: 100ch;
+  text-align: left;
+  -webkit-font-smoothing
+  hyphens: none;
 }
 
 .flex {
