--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,14 @@
+<!doctype html>
+<html lang=en-us><
 <head>
-	<!--Meta-->
 	<meta charset="utf-8">
+    <meta name="description" content="" />
+	<meta name=generator content="Hugo 0.117.0">
+	<meta content="initial-scale=1,width=device-width,viewport-fit=cover" name=viewport>
+	<link href=/favicons/favicon.ico rel=icon sizes=64x64 type=image/x-icon>
+	<link href=../..static/apple-touch-icon.png rel=apple-touch-icon>
+
+	<title>{{ .Site.Data.homepage.head.title }}</title>
 	<!--css-->
 	<link rel="stylesheet" href="{{relLangURL ""}}css/style.css">
 </head>
