--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 {{- partial "head.html" . -}}
 
 <body>
 	{{- partial "header.html" . -}}
+
 	<div id="content">
 		{{- block "main" . }}{{- end }}
 	</div>
+
 	{{- partial "footer.html" . -}}
 </body>
-
 </html>
