--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,15 @@
 Hello Cruel World
+
+<!DOCTYPE html>
+<html>
+{{- partial "head.html" . -}}
+
+<body>
+	{{- partial "header.html" . -}}
+	<div id="content">
+		{{- block "main" . }}{{- end }}
+	</div>
+	{{- partial "footer.html" . -}}
+</body>
+
+</html>
