--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,22 +1,19 @@
 {{ define "main" }}
 
-<div class="container">
-	<div class="row">
-	  	<div class="col col-sm-12 col-md-6 col-lg-6">
 			{{site.Title}}
 			{{- with .Site.Params.Tagline }}
 			{{end -}}
 			{{.Content}}
-	  	</div>
-		  	{{ $sortedPages := sort .Site.RegularPages "Title" "asc" }}
-		  	{{ range $sortedPages }}
-			  	{{ if eq .Section "work" }}
-				<div class="col col-sm-12 col-md-6 col-lg-2">
-					<a href="{{ .Permalink }}">{{ .Title }}</a>
-				</div>	
-			{{ end }}
-			{{ end }}	
-	</div>
-</div>
+
+			<div class="grid-container grid-6">
+				{{ $sortedPages := sort .Site.RegularPages "Title" "asc" }}
+				{{ range $sortedPages }}
+					{{ if eq .Section "work" }}
+						<div class="grid-item">	
+						<a href="{{ .Permalink }}">{{ .Title }}</a>
+						</div>
+				{{ end }}
+				{{ end }}	
+			</div>
 
 {{ end }}
