--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,9 @@
 // main.scss
 @import 'normalize';
 @import 'grid';
+@import 'fonts';
+@import 'typography';
+@import 'links';
 
 body.frozen {
   overflow: hidden;
