--- a/static/fonts/aulac/stylesheet.css
+++ b/static/fonts/aulac/stylesheet.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'aulac';
+    font-family: 'Aulac';
     src: url(AulacRegular.woff2) format('woff2'),
         url(AulacRegular.woff) format('woff');
     font-weight: normal;
