--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -1,4 +1,4 @@
-@import '/fonts/aulac/stylesheet.css';
+@import '/static/fonts/aulac/stylesheet.css';
 
 %--shoulders {
   --typography--shoulder: calc(1 - var(--typography--cap-height));
