--- a/assets/sass/_grid.scss
+++ b/assets/sass/_grid.scss
@@ -1,24 +1,27 @@
-.masonry {
-  column-count: 6;
-  column-gap: 20px;
-
-  @media (max-width: 1024px) {
-    column-count: 3;
-  }
-
-  @media (max-width: 768px) {
-    column-count: 1;
-  }
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-.masonry-item {
-  display: inline-block;
-  margin: 0 0 20px;
-  width: 100%;
-  break-inside: avoid;
+.flex-item {
+  max-width: calc(100% - 20px); /* Account for gap */
+  display: flex;
+  flex-direction: column; /* Stacks title and image container vertically */
+}
 
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+img {
+  max-width: 100%; /* Makes sure the image doesn't stretch beyond the container */
+  height: auto;
+}
+
+.image-container {
+  display: flex;
+  flex-wrap: nowrap; /* Change to 'wrap' if you want the images to wrap onto the next line */
+  gap: 10px; /* Gap between each image item */
+}
+
+.image-item {
+  /* Remove 'flex: 1' if you want each image to be its original size */
+  /* Additional styling, if needed */
 }
