--- a/assets/sass/_grid.scss
+++ b/assets/sass/_grid.scss
@@ -33,8 +33,12 @@ img {
   
   .project-content {
     width: 100%;
-    max-width: 500px; // Match max-width of the image
+    max-width: 300px; // Match max-width of the image
     box-sizing: border-box;
     margin: 0 auto; // Center the text box if its parent is wider than 500px
   }
+}
+
+.image-caption {
+     
 }
