--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,31 +4,44 @@
 				{{.Content}}
 				</div>
 			</div>
+
 			<div class="flex-container">
 				{{ $sortedPages := sort .Site.RegularPages "Title" "asc" }}
 				{{ range $sortedPages }}
 				  {{ if eq .Section "work" }}
-					{{ with .Resources.ByType "image" }}
-					  {{ range $index, $element := . }}
+					{{ $currentPage := . }} <!-- Store current Markdown file context -->
+					{{ $imageResources := .Resources.ByType "image" }}
+					{{ if $imageResources }}
+					  {{ range $index, $element := $imageResources }}
 						<div class="flex-item">
 						  <div class="image-container">
 							<div class="image-item">
-							  <img src="{{ $element.RelPermalink }}" alt="{{ with $element.Params.alt }}{{ . }}{{ else }}{{ $element.Title }}{{ end }}" />
+							  <img class="img-transition" src="{{ $element.RelPermalink }}" alt="{{ with $element.Params.alt }}{{ . }}{{ else }}{{ $element.Title }}{{ end }}" />
 							  <div class="image-caption"> <!-- The new div for image caption -->
 								<p>{{ with $element.Params.caption }}{{ . }}{{ else }}No Caption{{ end }}</p>
 							  </div>
 							  {{ if eq $index 0 }} <!-- Check if it is the first image -->
 								<div class="project-content">
-								  {{ $.Content }}
+								  {{ $currentPage.Content }} <!-- Display Markdown file content -->
 								</div>
 							  {{ end }}
 							</div>
 						  </div>
 						</div>
 					  {{ end }}
+					{{ else }}
+					  <div class="flex-item">
+						<div class="image-container">
+						  <div class="poem-item">
+							{{ $currentPage.Content }}
+						  </div>
+						</div>
+					  </div>
 					{{ end }}
 				  {{ end }}
 				{{ end }}  
 			  </div>
-			  		  
+			  
+			  
+
 {{ end }}
