--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,14 +11,19 @@
 				  {{ if eq .Section "work" }}
 					{{ $currentPage := . }} <!-- Store current Markdown file context -->
 					{{ $imageResources := .Resources.ByType "image" }}
+					{{ $totalImages := len $imageResources }} <!-- Calculate the total number of images -->
 					{{ if $imageResources }}
 					  {{ range $index, $element := $imageResources }}
 						<div class="flex-item">
 						  <div class="image-container">
 							<div class="image-item">
 							  <img class="img-transition" src="{{ $element.RelPermalink }}" alt="{{ with $element.Params.alt }}{{ . }}{{ else }}{{ $element.Title }}{{ end }}" />
-							  <div class="image-caption"> <!-- The new div for image caption -->
-								<p>{{ with $element.Params.caption }}{{ . }}{{ else }}No Caption{{ end }}</p>
+							  <div class="image-caption">
+								<p>{{ with $element.Params.caption }}{{ . }}{{ else }}No Caption{{ end }}
+								{{ if gt $totalImages 1 }} <!-- Only show if more than 1 image -->
+								  <span class="image-number"> {{ add $index 1 }}/{{ $totalImages }}</span>
+								{{ end }}
+								</p>
 							  </div>
 							  {{ if eq $index 0 }} <!-- Check if it is the first image -->
 								<div class="project-content">
@@ -39,7 +44,7 @@
 					  </div>
 					{{ end }}
 				  {{ end }}
-				{{ end }}  
+				{{ end }}
 			  </div>
 			  
 			  
