--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -3,25 +3,39 @@
     font-family: "aulac";
     font-kerning: auto;
     hyphens: none;
-    letter-spacing: 0.005em;
+    letter-spacing: 0.006em;
   }
   
   // Font face definition
   @font-face {
     font-family: 'aulac';
-    src: url(fonts/aulac/AulacRegular.woff2) format('woff2'),
-         url(fonts/aulac/AulacRegular.woff) format('woff');
+    src: url(/fonts/aulac/AulacRegular.woff2) format('woff2'),
+         url(/fonts/aulac/AulacRegular.woff) format('woff');
     font-weight: normal;
     font-style: normal;
   }
   
+  .filter {
+    @include aulac-styles;
+    text-align: center;
+    font-size: 0.75em;
+    padding-bottom: 1em;
+    padding-top: 0.5em;
+    text-transform: uppercase;
+  }
+
+  .sort-button.selected {
+    text-decoration: underline;
+  }  
+
   // Applying the mixin
   .image-caption {
     @include aulac-styles;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.75em;
     padding-bottom: 1em;
     padding-top: 0.5em;
+    text-transform: uppercase;
   }
   
   .project-content, .bio {
@@ -37,6 +51,12 @@
     font-size: 2em;
     line-height: 1.25em;
     max-width: 600px;
+    max-width: 15ch;
   }
 
-  
+  .poem-item.active {
+    max-width: 15ch;
+    font-size: 3em;
+    max-width: 600px;
+  }
+
