--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,8 @@
 @import 'normalize';
+@import 'header';
 @import 'layout';
+@import 'projects';
 @import 'typography';
 
-body.frozen {
-  overflow: hidden;
-}
 
 
