Renaming and Updates

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 <head>
-	<meta charset="utf-8">
-	<meta content="initial-scale=1,width=device-width,viewport-fit=cover" name=viewport>
-	{{- block "head" .}}{{ end -}}
-	{{- $favicon := resources.Get "/icons/favicon.ico" -}}
-	<link href="{{$favicon.RelPermalink}}" rel="icon" sizes="64x64" type="image/x-icon" />
-	{{- $faviconSvg := resources.Get "/icons/favicon.svg" -}}
-	<link href="{{$faviconSvg.RelPermalink}}" rel="icon" type="image/svg+xml" />
-	{{- $touchIcon := resources.Get "/icons/touch.png" -}}
-	<link href="{{$touchIcon.RelPermalink}}" rel="apple-touch-icon" />	
-	<title>
-	{{- block "title" . -}}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    {{- block "head" .}}{{ end -}}
+    
+    <!-- Favicons -->
+    {{- $favicon := resources.Get "/icons/favicon.ico" -}}
+    <link href="{{$favicon.RelPermalink}}" rel="icon" sizes="64x64" type="image/x-icon">
+    {{- $faviconSvg := resources.Get "/icons/favicon.svg" -}}
+    <link href="{{$faviconSvg.RelPermalink}}" rel="icon" type="image/svg+xml">
+    {{- $touchIcon := resources.Get "/icons/touch.png" -}}
+    <link href="{{$touchIcon.RelPermalink}}" rel="apple-touch-icon">
+    
+    <!-- Site Title -->
+    <title>
+    {{- block "title" . -}}
         {{ .Site.Title }}
     {{- end -}}
-	</title>
-	{{- block "opengraph" .}}
-	<meta content="{{block "og:image" . }}{{(resources.Get "/icons/preview.png").Permalink}}{{end}}" name="og:image" />
-	<meta content="{{block "og:title" .}}{{- .Site.Title -}}{{end}}" name="og:title" />
-	<meta content="{{block "og:description" . }}{{ htmlUnescape .Site.Params.Tagline | safeHTML }}{{end}}" name="og:description" />
-	{{end -}}
-	<meta content="{{ .Site.BaseURL }}" name="og:url" />
-	<meta content="website" name="og:type" />	
-	{{ $sass := resources.Get "scss/main.scss" }}
-	{{ $options := (dict "enableSourceMap" (not hugo.IsProduction) "transpiler" "dartsass") }}
-	{{ $mainCss := $sass | resources.ToCSS $options | resources.Minify }}
-	<link href="{{($mainCss | resources.Fingerprint "sha512").RelPermalink}}" rel="stylesheet" />
-	{{- $js := resources.Get "scripts/focus.js" | js.Build | resources.Minify -}}
-	<script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
-	{{- with .Site.Params.GoatCounter }}
-	<script data-goatcounter="https://{{.}}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-	{{end -}}
+    </title>
+
+    <!-- Open Graph Metadata -->
+    {{- block "opengraph" .}}
+    <meta content="{{block "og:image" . }}{{(resources.Get "/icons/preview.png").Permalink}}{{end}}" name="og:image">
+    <meta content="{{block "og:title" .}}{{- .Site.Title -}}{{end}}" name="og:title">
+    <meta content="{{block "og:description" . }}{{ htmlUnescape .Site.Params.Tagline | safeHTML }}{{end}}" name="og:description">
+    {{end -}}
+    <meta content="{{ .Site.BaseURL }}" name="og:url">
+    <meta content="website" name="og:type">
+
+    <!-- Stylesheets -->
+    {{ $sass := resources.Get "scss/main.scss" }}
+    {{ $options := (dict "enableSourceMap" (not hugo.IsProduction) "transpiler" "dartsass") }}
+    {{ $mainCss := $sass | resources.ToCSS $options | resources.Minify }}
+    <link href="{{($mainCss | resources.Fingerprint "sha512").RelPermalink}}" rel="stylesheet">
+
+    <!-- JavaScript -->
+    {{- $js := resources.Get "scripts/focus.js" | js.Build | resources.Minify -}}
+    <script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
+
+    <!-- Analytics -->
+    {{- with .Site.Params.GoatCounter }}
+    <script data-goatcounter="https://{{.}}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    {{end -}}
 </head>
+
 <body {{ block "bodyMeta" .}}{{end}} {{ if hugo.IsProduction }}data-production="true"{{ end }}>
 	<div class="container">
 		<main>
