--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -17,7 +17,7 @@
 				<div class="image-caption">
 				  <p>{{ with $element.Params.caption }}{{ . }}{{ else }}No Caption{{ end }}
 				  {{ if gt $totalImages 1 }}
-					<span class="image-number"> {{ add $index 1 }} of {{ $totalImages }}</span>
+					<span class="image-number"> {{ add $index 1 }}/{{ $totalImages }}</span>
 				  {{ end }}
 				  </p>
 				</div>
